syntax = "proto3";

package grpc_web;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "pkg/link/link.proto";

service Link {
    rpc GetLink(GetLinkRequest) returns (link.Link) {
        option(google.api.http) = {
			get: "/api/{hash}"
		};
    };

    rpc CreateLink(link.Link) returns (link.Link) {
        option(google.api.http) = {
			post: "/api"
			body: "*"
		};
    };

    rpc DeleteLink(link.Link) returns (google.protobuf.Empty) {
        option(google.api.http) = {
			delete: "/api"
			body: "*"
		};
    };

    rpc RedirectLink(RedirectLinkRequest) returns (RedirectLinkResponse) {
        option(google.api.http) = {
			get: "/api/s/{hash}"
		};
    };
}

message GetLinkRequest {
    string hash = 1;
}

message RedirectLinkRequest {
    string hash = 1;
}

message RedirectLinkResponse {
    google.protobuf.Empty link = 1;
}
